<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_cuadrado"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.user.figurasgeometricas.Cuadrado">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <TextView
            android:text="@string/cuadrado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lblOpCuadrado"
            android:textAlignment="center"
            android:textSize="24sp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="58dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="31dp"
                android:id="@+id/textView5"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="@string/valorDellado" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/cajaDato"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="129dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cmdAceptar"
                android:layout_weight="1"
                android:text="@string/calcular"
                android:onClick="calcular"/>

            <Button
                android:text="@string/borrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button"
                android:layout_weight="1"
                android:onClick="borrar"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
